<resources>
    <string name="app_name">GuessNumber</string>
    <string name="title_activity_end_play" translatable="false">EndPlayActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next" translatable="false">Next</string>
    <string name="previous" translatable="false">Previous</string>

    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
    <string name="txtNom">Nombre</string>
    <string name="txtIntentos">Introducir Número</string>
    <string name="btnPlay">!A Jugar!</string>
    <string name="tvIntentos">Intentos:</string>
    <string name="tvNombre">Nombre:</string>
    <string name="txtTitle" translatable="false">Guess Number</string>
    <string name="tvResulFin">El número es:</string>
    <string name="btnComprobar">Comprobar</string>
</resources>